Fix like bubble being cut off

--- a/web/css/make.scss
+++ b/web/css/make.scss
@@ -251,8 +251,6 @@ body {
 
 #social-buttons-area {
   min-height: 66px;
-  max-height: 66px;
-  overflow: hidden;
   margin-top: 10px;
   div {
     margin-top: 10px;
